Re-exportação da versão atualizada da API
